css/style.css
a.logo {
  position: relative;
  display: inline-block; 
}
a.logo:after {
  content: ""; 
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left:0;
}
#top_heading {
    font-family: sans-serif;
    font-size: 34px;
    color: #ff9600;
    position: absolute;
    top: -2px;
    left: 72px;
    width: 100%;
}
#btm_heading {
    font-family: sans-serif;
    font-size: 24px;
    color: #b87e32;
    position: relative;
    left: 20px;
    top: -5px;
}
.logo {
    text-decoration: none;
}
h1, h2, h3, h4, h5, h6 {
	font-size: 100%;
	margin-top: 1em;
	text-align: left;
}
h1 {
	font-size: 110%;
	margin-bottom: 1em;
}
body {
	background-color: white;
	color: #000;
        font-size: 0.9em;
        font-family: sans-serif,helvetica;
        margin: 0;
        padding: 0;
	overflow-x: hidden;

}
.header {
	position:fixed;
	top:0;
	left:0;
        text-align: left;
        vertical-align: text-top;
        margin: 0;
        /*margin-bottom: 1em;*/
        padding: 18px 0em 3px;
        padding-left: 12px;
        background-color: #34444F;
        border-bottom: 3px solid #000;
        color: #E89C2E;
        font-weight: normal;
        font-size: 2.5em;
	width: 100%;
	z-index: 50;
}
.left {
	float: left; 
	width: 15vw;
	height: 100vh;
	position:fixed;
	top: 95px;
	left:0;
	display: block;
	text-align:left;
	padding-top: 3vh;
	padding-left: 2vw;
	background-color: #34444F;
        border-right: 3px solid #000;
	color: #00C9FF;
	z-index: 100;
}
.left > strong {
	font-size: 1.1em;
}
.left > ul {
	list-style-type: none; margin-left:0; padding-left: 1.25vw;
}

.navlink {
	color:#00C9FF;
	background-color:#315B66;
	text-align:center;
	text-decoration:none;
	text-transform:uppercase;
	display: block;
	width: 12vw;
	padding-top: .5em;
	padding-bottom: .5em;
	margin-top: .5em;
	margin-bottom: .5em;
        vertical-align: middle;
}
.navlink:hover {
	background-color:#0B5B70;
	color:#00C9FF;
}
.navlink:visited {
	color:#00C9FF;
}
h2 {
        text-align: left;
        margin: 0;
        padding: 0.6em 2em 0.6em;
        padding-left: 1em;
        color: #000000;
        font-weight: normal;
        font-size: 1.5em;
}
p {
        text-align: left;
	margin: 1em 0;
        padding: 0.4em 1em 0.3em;
        padding-left: 1.8em;
        color: #000000;
        font-weight: normal;
        font-size: 1.2em;
}
h1 strong {
        font-weight: bold;
}
.logo > object > img {
    border-radius: 20px;
    -webkit-border-radius: 20px;
    -moz-border-radius: 20px;
    background: url(me.jpg) no-repeat;
    margin-top: -.1em;
    box-shadow: 0 0 8px rgba(0, 0, 0, .8);
    -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
    -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
    vertical-align: middle;
}
.footer {
	color: #56757D;
	font: 13.34px helvetica, arial, clean, sans-serif;
}
.footer > a {
	color: #56757D;
	text-decoration: none;
}
.pagecontent {
	position:absolute;
	margin-left: 16vw;
	padding-left: 2vw;
	top: 100px;
	width: 80vw;
}
blockquote {
	margin-left:1em;
}
::selection {
    color: white;
    background-color: #369;
}
.site {
	font-size: 110%;
	text-align: justify;
	width: 728px;
	margin: 3em auto 2em auto;
	line-height: 1.5em;
}
.comments {
	text-align: left;
}
.title {
	color: #369;
	font-weight: bold;
	margin-bottom: 2em;
}
.site .title a {
	color: #369;
	text-decoration: none;
}
.site .title a:hover {
	color: black;
}
.site .meta {
	color: #aaa;
}
.site .blogfooter {
	font-size: 80%;
	color: #666;
	border-top: 4px solid #eee;
	margin-top: 2em;
	overflow: hidden;
}
.site .blogfooter .contact {
	float: left;
	margin-right: 3em;
}
.site .blogfooter .contact a,
.site .blogfooter .rss a {
	color: #8085C1;
}
.site .blogfooter .rss {
	margin-top: 1.1em;
	margin-right: 0em;
	float: right;
}
#post pre {
	border: 1px solid #ddd;
	background-color: #eef;
	padding: 0 .4em;
	overflow-x: auto;
	white-space: pre-wrap;
	white-space: -moz-pre-wrap !important;
	white-space: -pre-wrap;
	white-space: -o-pre-wrap;
	word-wrap: break-word;
}
#post ul,
#post ol {
	margin-left: 1.35em;
}
#post code {
	border: 1px solid #ddd;
	background-color: #eef;
	font-size: 85%;
	padding: 0 .2em;
}
#post pre code {
	border: none;
}
#post pre.terminal {
	border: 1px solid black;
	background-color: #333;
	color: white;
}
#post pre.terminal code {
	background-color: #333;
}
#related {
	margin-top: 2em;
}
#related h2 {
	margin-bottom: 1em;
}
ul.posts {
	list-style-type: none;
	margin-bottom: 2em;
}

ul.posts li {
	line-height: 1.75em;
}

ul.posts span {
	color: #aaa;
	font-size: 80%;
}

ul.posts a {
	text-align: left;
}

